crates/fig-lexer/tests/snapshots/integration_tests__literals__floats.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: floats
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Let
- Ident: a
- Eq
- FloatLiteral:
    digits: "0.0"
    exponent: ~
    suffix: ~
- Newline
- Let
- Ident: b
- Eq
- FloatLiteral:
    digits: "1.0"
    exponent: ~
    suffix: ~
- Newline
- Let
- Ident: c
- Eq
- FloatLiteral:
    digits: "3.14"
    exponent: ~
    suffix: ~
- Newline
- Let
- Ident: d
- Eq
- FloatLiteral:
    digits: "2.71828"
    exponent: ~
    suffix: ~
- Newline
- Let
- Ident: e
- Eq
- FloatLiteral:
    digits: "100.001"
    exponent: ~
    suffix: ~
- Newline
- Let
- Ident: f
- Eq
- FloatLiteral:
    digits: "0.5"
    exponent: ~
    suffix: ~
- Newline
- Let
- Ident: g
- Eq
- FloatLiteral:
    digits: "999.999"
    exponent: ~
    suffix: ~
- Newline
- Pass
- Newline
- Dedent
