crates/fig-lexer/tests/snapshots/integration_tests__literals__integers.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: integers
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Let
- Ident: a
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Let
- Ident: b
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Let
- Ident: c
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "42"
    suffix: ~
- Newline
- Let
- Ident: d
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "255"
    suffix: ~
- Newline
- Let
- Ident: e
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "65535"
    suffix: ~
- Newline
- Let
- Ident: f
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "4294967295"
    suffix: ~
- Newline
- Let
- Ident: g
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "9999999999"
    suffix: ~
- Newline
- Pass
- Newline
- Dedent
